[package]
name = "flyio-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.100"
crossbeam = "0.8.2"
log4rs = "1.2.0"
log = "0.4.20"

[lib]
name = "maelstrom_convenience"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

